src/objects/Account_Contact_Role_Transaction__c.object
<CustomObject>
    <description>A reflection of the account contact role object to allow OBM workflows to be fired. This is monitored and updated every few seconds by scheduled Apex.</description>
    <fields>
        <fullName>Account_Contact_Role_SFID__c</fullName>
        <description>The compound key of the account : contact external provider id&apos;s allowing an external ID that both systems can set and reference</description>
        <externalId>true</externalId>
        <inlineHelpText>The compound key of the account : contact external provider id&apos;s allowing an external ID that both systems can set and reference</inlineHelpText>
        <label>Account Contact Role SFID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Populated via workflow for searching purposes</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Parent_Account__c</fullName>
        <description>Populated by workflow for use in searching</description>
        <label>Account Parent Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Contact Roles</relationshipLabel>
        <relationshipName>Account_Contact_Role_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Populated by workflow for use in searching</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <description>Populated by workflow for use in searching</description>
        <label>Contact Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Populated by workflow for use in searching</description>
        <label>Contact Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Populated by workflow for use in searching</description>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <description>Populated by workflow for use in searching</description>
        <label>Contact Record Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The contact that this account/contact relationship is holding.</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contact Person</value>
            </filterItems>
            <infoMessage>Account Contact Roles can only be associated to Contact Persons</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Contact Roles</relationshipLabel>
        <relationshipName>Account_Contact_Role_Transactions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Provider_Relationship_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Provider Relationship ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ignore_ACR_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore ACR Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <formula>Account__r.Id  =  Contact__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Governed_by_External_Party__c</fullName>
        <formula>NOT(ISBLANK(External_Provider_Relationship_ID__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Governed by External Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Work_Site_and_Contact_Person__c</fullName>
        <description>This field is true if the Account RT is Work Site and the Contact RT is Contact Person. It is used to filter out the records that should create Outbound Notification records and send OBMs when records are deleted.</description>
        <formula>Account__r.RecordType.DeveloperName = &apos;Work_Site&apos; &amp;&amp;
Contact__r.RecordType.DeveloperName = &apos;Contact_Person&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Work Site and Contact Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_PN_Synchronized_Date__c</fullName>
        <label>Last PN Synchronized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MKTO_Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Account_Record_Type__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Account_Source__c</fullName>
        <formula>TEXT( Account__r.AccountSource )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Account Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Account_Type__c</fullName>
        <formula>TEXT( Account__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Annual_Revenue__c</fullName>
        <formula>Account__r.AnnualRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MKTO_Chain_Profile__c</fullName>
        <formula>Account__r.Chain_Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Chain Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Chain__c</fullName>
        <formula>Account__r.Chain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Chain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Competitor__c</fullName>
        <formula>Account__r.Competitor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_Concept_Type__c</fullName>
        <formula>TEXT( Account__r.Concept_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Concept/Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Converted_from_Webshop_Dummy__c</fullName>
        <formula>Account__r.Converted_From_Webshop_Dummy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Converted from Webshop Dummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_Corporate_Form__c</fullName>
        <formula>TEXT(Account__r.Corporate_Form__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Corporate Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Deletion_Flag__c</fullName>
        <formula>Account__r.Deletion_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_External_Advertising_Block__c</fullName>
        <formula>Account__r.External_Advertising_Block__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO External Advertising Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_External_Legal_Entity_Status__c</fullName>
        <formula>TEXT(Account__r.External_Legal_Entity_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO External Legal Entity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_External_Partner_Type__c</fullName>
        <formula>TEXT ( Account__r.External_Partner_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO External Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_External_Partner__c</fullName>
        <formula>Account__r.External_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO External Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_External_Work_Site_Status__c</fullName>
        <formula>TEXT(Account__r.External_Work_Site_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO External Work Site Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_External_or_Internal__c</fullName>
        <formula>TEXT( Account__r.External_or_Internal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO External or Internal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Founding_Date__c</fullName>
        <formula>Account__r.Founding_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Founding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MKTO_Internal_Lifecycle_Status__c</fullName>
        <formula>TEXT ( Account__r.Internal_Lifecycle_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Internal Lifecycle Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Is_Active_Order_Registrar_Number__c</fullName>
        <formula>Account__r.Is_Active_Order_Registrar_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Is Active Order Registrar Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_DK_Customer_Service_Segment__c</fullName>
        <formula>Account__r.LO_DK_Customer_Service_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO DK Customer Service Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_DK_Sales_Mode__c</fullName>
        <formula>Account__r.LO_DK_Sales_Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO DK Sales Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_DK_Sub_Segment__c</fullName>
        <formula>Account__r.LO_DK_Sub_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO DK Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_DK_Top_Segment__c</fullName>
        <formula>Account__r.LO_DK_Top_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO DK Top Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_FI_Customer_Service_Segment__c</fullName>
        <formula>Account__r.LO_FI_Customer_Service_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO FI Customer Service Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_FI_DPD_Customer_Service_Segment__c</fullName>
        <formula>Account__r.LO_FI_DPD_Customer_Service_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO FI DPD Customer Service Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_FI_DPD_Sales_Mode__c</fullName>
        <formula>Account__r.LO_FI_DPD_Sales_Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO FI DPD Sales Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_FI_DPD_Sub_Segment__c</fullName>
        <formula>Account__r.LO_FI_DPD_Sub_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO FI DPD Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_FI_DPD_Top_Segment__c</fullName>
        <formula>Account__r.LO_FI_DPD_Top_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO FI DPD Top Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_FI_Sales_Mode__c</fullName>
        <formula>Account__r.LO_FI_Sales_Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO FI Sales Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_FI_Sub_Segment__c</fullName>
        <formula>Account__r.LO_FI_Sub_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO FI Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_FI_Top_Segment__c</fullName>
        <formula>Account__r.LO_FI_Top_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO FI Top Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_NO_Customer_Service_Segment__c</fullName>
        <formula>Account__r.LO_NO_Customer_Service_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO NO Customer Service Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_NO_Sales_Mode__c</fullName>
        <formula>Account__r.LO_NO_Sales_Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO NO Sales Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_NO_Sub_Segment__c</fullName>
        <formula>Account__r.LO_NO_Sub_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO NO Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_NO_Top_Segment__c</fullName>
        <formula>Account__r.LO_NO_Top_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO NO Top Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_SE_Customer_Service_Segment__c</fullName>
        <formula>Account__r.LO_SE_Customer_Service_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO SE Customer Service Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_SE_Sales_Mode__c</fullName>
        <formula>Account__r.LO_SE_Sales_Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO SE Sales Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_SE_Sub_Segment__c</fullName>
        <formula>Account__r.LO_SE_Sub_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO SE Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_LO_SE_Top_Segment__c</fullName>
        <formula>Account__r.LO_SE_Top_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO LO SE Top Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Language__c</fullName>
        <formula>TEXT ( Account__r.Language__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Legal_Entity_Primary_Ind_Group_77__c</fullName>
        <formula>TEXT (Account__r.Legal_Entity_Primary_Ind_Group_77__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Legal Entity Primary Ind Group - 77</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Legal_Entity_Primary_Ind_Group_8__c</fullName>
        <formula>TEXT ( Account__r.Legal_Entity_Primary_Ind_Group_8__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Legal Entity Primary Ind Group 8</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Legal_Entity_Primary_Industry_del__c</fullName>
        <formula>TEXT ( Account__r.Legal_Entity_Primary_Industry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Legal Entity Primary Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Liquidation_Date__c</fullName>
        <formula>Account__r.Liquidation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Liquidation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MKTO_ME_SE_Customer_Service_Segment__c</fullName>
        <formula>Account__r.ME_SE_Customer_Service_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO ME SE Customer Service Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_ME_SE_Sales_Mode__c</fullName>
        <formula>Account__r.ME_SE_Sales_Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO ME SE Sales Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_ME_SE_Sub_Segment__c</fullName>
        <formula>Account__r.ME_SE_Sub_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO ME SE Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_ME_SE_Top_Segment__c</fullName>
        <formula>Account__r.ME_SE_Top_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO ME SE Top Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Number_of_Employees_at_Legal_Entity__c</fullName>
        <formula>TEXT( Account__r.Number_of_Employees_at_Legal_Entity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Number of Employees at Legal Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Number_of_Employees_at_Work_Site__c</fullName>
        <formula>TEXT(Account__r.Number_of_Employees_at_Work_Site__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Number of Employees at Work Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Number_of_Office_Employees_at_LE__c</fullName>
        <formula>TEXT(Account__r.Number_of_Office_Employees_at_LE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Number of Office Employees at LE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Number_of_Office_Employees_at_WS__c</fullName>
        <formula>TEXT(Account__r.Number_of_Office_Employees_at_WS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Number of Office Employees at WS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_PDK_BE_Customer_Service_Segment__c</fullName>
        <formula>Account__r.PDK_BE_Customer_Service_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PDK BE Customer Service Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_PDK_BE_Sales_Mode__c</fullName>
        <formula>Account__r.PDK_BE_Sales_Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PDK BE Sales Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_PDK_BE_Sub_Segment__c</fullName>
        <formula>Account__r.PDK_BE_Sub_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PDK BE Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_PDK_BE_Top_Segment__c</fullName>
        <formula>Account__r.PDK_BE_Top_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PDK BE Top Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_PDK_LO_Customer_Service_Segment__c</fullName>
        <formula>Account__r.PDK_LO_Customer_Service_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PDK LO Customer Service Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_PDK_LO_Sales_Mode__c</fullName>
        <formula>Account__r.PDK_LO_Sales_Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PDK LO Sales Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_PDK_LO_Sub_Segment__c</fullName>
        <formula>Account__r.PDK_LO_Sub_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PDK LO Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_PDK_LO_Top_Segment__c</fullName>
        <formula>Account__r.PDK_LO_Top_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PDK LO Top Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_PN_Email_Block__c</fullName>
        <formula>Account__r.PN_Email_Block__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PN Email Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_PN_Internal_Contact_Block__c</fullName>
        <formula>Account__r.PN_Internal_Contact_Block__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PN Internal Contact Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_PN_Mail_Block__c</fullName>
        <formula>Account__r.PN_Mail_Block__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PN Mail Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_PN_Phone_Block__c</fullName>
        <formula>Account__r.PN_Phone_Block__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PN Phone Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_PN_SMS_Block__c</fullName>
        <formula>Account__r.PN_SMS_Block__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO PN SMS Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_Parent_Account__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Parent_Legal_Name__c</fullName>
        <formula>Account__r.Parent_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Parent Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Parent_Registration_Country__c</fullName>
        <formula>Account__r.Parent_Registration_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Parent Registration Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Postal_Address_City__c</fullName>
        <formula>Account__r.Postal_Address_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Postal Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Postal_Address_Country__c</fullName>
        <formula>TEXT ( Account__r.Postal_Address_Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Postal Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Postal_Address_Postal_City__c</fullName>
        <formula>Account__r.Postal_Address_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Postal Address Postal City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Posttidningsnamn__c</fullName>
        <formula>Account__r.Posttidningsnamn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Posttidningsnamn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Rating__c</fullName>
        <formula>TEXT ( Account__r.Rating )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Registered_on_Robinsonlist__c</fullName>
        <formula>Account__r.Registered_on_Robinsonlist__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Registered on Robinsonlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKTO_Registration_Country__c</fullName>
        <formula>TEXT ( Account__r.Registration_Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Registration Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Retail_Segment__c</fullName>
        <formula>Account__r.Retail_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Retail Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Source_System__c</fullName>
        <formula>Account__r.Source_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Source System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Turnover__c</fullName>
        <formula>Account__r.Turnover__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MKTO_Verified__c</fullName>
        <formula>TEXT ( Account__r.Verified__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Verified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Visiting_Address_City__c</fullName>
        <formula>Account__r.Visiting_Address_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Visiting Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Visiting_Address_Country__c</fullName>
        <formula>TEXT ( Account__r.Visiting_Address_Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Visiting Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Visiting_Address_Postal_Code__c</fullName>
        <formula>Account__r.Visiting_Address_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Visiting Address Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKTO_Work_Site_Type__c</fullName>
        <formula>TEXT( Account__r.Work_Site_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKTO Work Site Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Mark_As_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN_Mark_As_Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_ErrorReasonCode__c</fullName>
        <label>PN Synchronization ErrorReasonCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_Error__c</fullName>
        <label>PN Synchronization Error</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PN_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Position__c</fullName>
        <label>Primary Position</label>
        <picklist>
            <picklistValues>
                <fullName>BE31610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE44610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE12220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31270</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31295</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31290</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE54630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98460</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE22300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE25100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE25200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98820</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE97300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31410</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31170</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE44850</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE41400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE62500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98520</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE62400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE97400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>